# temp

./: .gitignore  .gitlab-ci.yml
backend/: .eslintrc.js  package.json  pyproject.toml
backend/backend/: settings.py
backend/src/: app.ts  index.ts
backend/src/__tests__/: appSpec.ts
backend/src/config/: check-env-vars.ts
backend/src/middlewares/: error-handler.ts  morgan.ts
backend/src/utils/: logger.ts
backend/src/utils/errors/: bad-request-error.ts  custom-error.ts  database-connection-error.ts  not-authorized-error.ts  not-found.ts
