[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Mustafa <mustafausama@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
